WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267344
[WGSL] shader,execution,expression,call,builtin,sign:* is failing
https://bugs.webkit.org/show_bug.cgi?id=267344
Summary
[WGSL] shader,execution,expression,call,builtin,sign:* is failing
Tadeu Zagallo
Reported
2024-01-10 07:46:04 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-10 07:46:17 PST
<
rdar://problem/120784483
>
Tadeu Zagallo
Comment 2
2024-01-10 07:47:01 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22594
EWS
Comment 3
2024-01-11 00:54:30 PST
Committed
272903@main
(2539d51fd320): <
https://commits.webkit.org/272903@main
> Reviewed commits have been landed. Closing PR #22594 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug