[WGSL] shader,execution,expression,call,builtin,sign:* is failing https://bugs.webkit.org/show_bug.cgi?id=267344 rdar://120784483

Reviewed by Mike Wyrzykowski.

There was a typo in the runtime helper that returned the invered sign.

* Source/WebGPU/WGSL/Metal/MetalFunctionWriter.cpp:
(WGSL::Metal::FunctionDefinitionWriter::emitNecessaryHelpers):

Canonical link: https://commits.webkit.org/272903@main